# securebit-chat

./: .dockerignore  .gitignore  .htaccess  CHANGELOG.md  Dockerfile  FIXES-SUMMARY.md  LICENSE  README-LNbits-Integration.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  SECURITY_DISCLAIMER.md  SECURITY_UPDATES_v4.02.985.md  SECURITY_UPDATES_v4.1.md  browserconfig.xml  build.ps1  example_async_cleanup.js  example_master_key_usage.js  example_persistent_storage.js  fly.toml  index.html  manifest.json  meta.json  package-lock.json  package.json  sw.js  tailwind.config.json  test-bluetooth-buttons.html  test-bluetooth.js  test-header.js  test-lnbits-integration.html  test_methods.html
assets/: tailwind.css
config/: ice-servers.example.js  ice-servers.js  ice-servers.prod.js
deploy/: nginx.conf
doc/: API.md  CONFIGURATION.md  CONTRIBUTING.md  CRYPTOGRAPHY.md  SECURITY-ARCHITECTURE.md
public/: meta.json.example
scripts/: post-build.js  purge-cloudflare-cache.js
src/: app.jsx
src/enhanced-secure-crypto/: .gitattributes  Cargo.toml  crypto-bridge.js  demo.html  react-crypto-hook.js  secure-chat-demo.jsx  test.html
src/enhanced-secure-crypto/pkg/: enhanced_secure_crypto.d.ts  enhanced_secure_crypto.js  enhanced_secure_crypto_bg.wasm  enhanced_secure_crypto_bg.wasm.d.ts  package.json
src/enhanced-secure-crypto/scripts/: build.sh  test.sh
src/enhanced-secure-crypto/src/: lib.rs
tests/: debug-window-hooks.test.mjs  disconnect-cleanup.test.mjs  file-transfer-callback-propagation.test.mjs  file-transfer-chunk-rate-limit.test.mjs  file-transfer-cleanup.test.mjs  (+14 more)
(+60 files in other folders)
