[package]
name = "enhanced-secure-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
ring = "0.16"
rand = "0.8"
base64 = "0.13"
hex = "0.4"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CryptoKey",
  "SubtleCrypto", 
  "Window",
  "Crypto",
]

[features]
default = []
test-utils = []